--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Timi.</title>
+    <title>Post-Jump</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title">Timi.</div><br>
+    <div id="title">Post-Jump</div><br>
     <div id="links">
         
     </div>
@@ -25,8 +25,8 @@
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            Unter diesem Link finden Sie unser entwickeltes Spiel<br>
-            <button class="post-jump.timitech.ch">Post-Jump</button>
+            Our Game<br>
+	<button onclick="window.location.href = 'http://post-jump.timitech.ch';">Post-Jump</button>
         </div>
     </div>
     </center>
