--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ Ich bin Timon und ich bin Hobbymässiger Informatiker. Lorem ipsum dolor sit ame
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a class="social"><i class="fab fa-facebook"></i></a>
-                                        <a class="social"><i class="fab fa-twitter"></i></a>
-                                        <a class="social"><i class="fab fa-instagram"></i></a>
-                                        <a class="social"><i class="fab fa-dribbble"></i></a>
-                                        <a class="social"><i class="fab fa-medium"></i></a>
+										<td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.linkedin.com/in/timon-baumann-7715382ab/" class="social"><i class="fab fa-linkedin"></i></a></td>
+										<td class="animated zoomIn" style="animation-delay:2.4s;"><a href="mailto:timon.bauman@gmx.ch" class="social"><i class="fas fa-envelope"></i></a></td>
+										<td class="animated zoomIn" style="animation-delay:2.6s;"><a href="https://github.com/T1M0N2" class="social"><i class="fab fa-github"></i></a></td>
+										<td class="animated zoomIn" style="animation-delay:2.8s;"><a href="https://www.youtube.com/dein_kanal" class="social"><i class="fab fa-youtube"></i></a></td>
+										<td class="animated zoomIn" style="animation-delay:3.0s;"><a href="https://gitlab.com/timonbaumann" class="social"><i class="fab fa-gitlab"></i></a></td>
                                     </td>
                                 </tr>
                             </table>
