--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Ich bin Timon und ich bin Hobbymässiger Informatiker. Lorem ipsum dolor sit ame
                         <form>
                             <input type="text" placeholder="name" required>
                             <input type="email" placeholder="email" required><br>
-                            <textarea placeholder="your message" required rows="5"></textarea><br>
+                            <textarea placeholder="your message" required ></textarea><br>
                             <button class="btn_one">send</button>
                         </form> 
                     </td>
