--- a/about.html
+++ b/about.html
@@ -115,20 +115,25 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: white;
+            background-color: rgba(0,0,0,0.9); /* Schwarzer Hintergrund mit Transparenz */
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Vertikales Zentrieren */
+            align-items: center; /* Horizontales Zentrieren */
         }
 
-        /* Links in der Sidenav */
+
+      /* Links in der Sidenav */
         .sidenav a {
-            padding: 8px 8px 8px 32px;
+            padding: 15px;
             text-decoration: none;
             font-size: 25px;
-            color: #000;
+            color: #fff;
             display: block;
             transition: 0.3s;
+            text-align: center; /* Text in der Mitte */
         }
 
         /* Hover-Effekt für die Links */
@@ -139,12 +144,12 @@
         /* Schließen-Schaltfläche */
         .sidenav .closebtn {
             position: absolute;
-            top: 0;
+            top: 20px;
             right: 25px;
             font-size: 36px;
-            margin-left: 50px;
+            color: #fff;
         }
-
+		
         /* Header-Navigation */
         .w3-bar {
             display: flex;
@@ -179,7 +184,7 @@
             <div class="card">
                 <div class="card-side card-front">
                     <div class="card-logo">✝</div>
-					<div class="card-text">Ziehe einen Bibelvers</div>
+                    <div class="card-text">Ziehe einen Bibelvers</div>
                 </div>
                 <div class="card-side card-back" id="verse-card-back">
                     <!-- Rückseite wird durch das JavaScript mit Vers gefüllt -->
@@ -203,14 +208,15 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-white w3-padding-20">
-        <p></a>.</p>
+        <p></p>
     </footer>
 
-    <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
+   
+   <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
     <script>
         /* Öffnet die Seitenleiste */
         function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("mySidenav").style.width = "100%"; /* Volle Breite */
         }
 
         /* Schließt die Seitenleiste */
