--- a/index.html
+++ b/index.html
@@ -38,20 +38,24 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: white;
+            background-color: rgba(0,0,0,0.9); /* Schwarzer Hintergrund mit Transparenz */
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Vertikales Zentrieren */
+            align-items: center; /* Horizontales Zentrieren */
         }
 
         /* Links in der Sidenav */
         .sidenav a {
-            padding: 8px 8px 8px 32px;
+            padding: 15px;
             text-decoration: none;
             font-size: 25px;
-            color: #000;
+            color: #fff;
             display: block;
             transition: 0.3s;
+            text-align: center; /* Text in der Mitte */
         }
 
         /* Hover-Effekt für die Links */
@@ -62,10 +66,10 @@
         /* Schließen-Schaltfläche */
         .sidenav .closebtn {
             position: absolute;
-            top: 0;
+            top: 20px;
             right: 25px;
             font-size: 36px;
-            margin-left: 50px;
+            color: #fff;
         }
 
         /* Header-Navigation */
@@ -143,7 +147,7 @@
     <script>
         /* Öffnet die Seitenleiste */
         function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("mySidenav").style.width = "100%"; /* Volle Breite */
         }
 
         /* Schließt die Seitenleiste */
