--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
             margin-right: 20px;
         }
 
-        /* Seitenleiste (Sidenav) */
+     /* Seitenleiste (Sidenav) */
         .sidenav {
             height: 100%;
             width: 0;
@@ -38,20 +38,25 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: white;
+            background-color: rgba(0,0,0,0.9); /* Schwarzer Hintergrund mit Transparenz */
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Vertikales Zentrieren */
+            align-items: center; /* Horizontales Zentrieren */
         }
 
-        /* Links in der Sidenav */
+
+      /* Links in der Sidenav */
         .sidenav a {
-            padding: 8px 8px 8px 32px;
+            padding: 15px;
             text-decoration: none;
             font-size: 25px;
-            color: #000;
+            color: #fff;
             display: block;
             transition: 0.3s;
+            text-align: center; /* Text in der Mitte */
         }
 
         /* Hover-Effekt für die Links */
@@ -62,11 +67,12 @@
         /* Schließen-Schaltfläche */
         .sidenav .closebtn {
             position: absolute;
-            top: 0;
+            top: 20px;
             right: 25px;
             font-size: 36px;
-            margin-left: 50px;
+            color: #fff;
         }
+
 
         /* Header-Navigation */
         .w3-bar {
@@ -121,7 +127,6 @@
         <a href="about.html">Bibelverse</a>
         <a href="info.html">Kontakt</a>
     </div>
-
     <!-- Hauptcontainer für die Inhalte der Website -->
     <div id="info-container">
         <h2>E-Mail</h2>
@@ -141,11 +146,11 @@
         <p></p>
     </footer>
 
-    <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
+   <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
     <script>
         /* Öffnet die Seitenleiste */
         function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("mySidenav").style.width = "100%"; /* Volle Breite */
         }
 
         /* Schließt die Seitenleiste */
