--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
             text-align: left;
         }
 
+        /* Bildformatierung */
+        #cross-image {
+            display: block;
+            margin: 40px auto; /* Zentrieren des Bildes mit Abstand oben und unten */
+            width: 100%; /* Bildgröße relativ zur Containerbreite */
+            max-width: 600px; /* Maximale Bildbreite */
+            height: auto; /* Bewahrt das Seitenverhältnis */
+        }
+
         /* Footer */
         footer {
             padding: 5px 10px;
@@ -129,13 +138,16 @@
     <!-- Hauptcontainer für die Inhalte der Website -->
     <div id="info-container">
         <h2>Über die Website</h2>
-        <p>Diese Website widmet sich der Vermittlung von Bibelversen und christlichen Werten. Sie bietet tägliche Verse, die inspirieren und zum Nachdenken anregen sollen. Zudem ermöglicht die Seite den Austausch von Gedanken und Gebeten. Die Versammlung von Gläubigen in einem digitalen Raum fördert die Gemeinschaft und das Verständnis für Gottes Wort.</p>
-
+        <p>Lorem ipsum semper habeo duo, ut vis. Aliquyam eu splendide. Ut mei eteu nec antiopam corpora. Kasd pretium cetero qui arcu. Assentior ei his usu invidunt kasd justo justo. Semper Ne eleifend Per ut Eam graeci tincidunt. Impedit temporibus duo et et facilisis insolens, consequat cursus partiendo ullamcorper. Vulputate facilisi Donec Aliquam labore inimicus voluptua. Penatibus sea Vel amet. His ius audire In mea Repudiandae nullam sed assentior. Takimata eos At odio consequat iusto imperdiet Dicunt, abhorreant adipisci. Officiis rhoncus leo dicta vitae, clita elementum mauris definiebas. Consetetur te inimicus nec mus. Lorem Usu Duo Aenean corrumpit aliquyam est eum. Ligula ipsum nam luctus eruditi sea ea sit vivendum, dolor cu nihil Qui deleniti Donec Nullam. Takimata Maecenas consetetur incorrupte Aenean eirmod senserit eos. Amet, ocurreret et pro atomorum et rebum. Pro quis ut nec meis brute nunc.   
+		Lorem cum nihil platea tincidunt sed eleifend et imperdiet sitsem. Tempor usu et tesea Sed ligula id, persequeris ei. Sem at vero disputando ultricies labore no. Incorrupte ut et affert vitae, Lorem doctus, ne dolore elit. Est ius mucius et, oblique est ut Lorem no. Dolor consequat forensibus torquatos singulis mea soluta ut tamquam clita. Stet magna imperdiet ceteros et</p>
+       
         <h2>Unsere Mission</h2>
-        <p>Unsere Mission ist es, Menschen zu helfen, spirituell zu wachsen und ein tieferes Verständnis für die Bibel und den christlichen Glauben zu entwickeln. Wir glauben daran, dass die Bibel nicht nur ein Buch, sondern eine Quelle der Wahrheit und der Weisheit ist, die in allen Lebensbereichen relevant ist.</p>
+        <p>Lorem ipsum semper habeo duo, ut vis. Aliquyam eu splendide. Ut mei eteu nec antiopam corpora. Kasd pretium cetero qui arcu. Assentior ei his usu invidunt kasd justo justo. Semper Ne eleifend Per ut Eam graeci tincidunt. Impedit temporibus duo et et facilisis insolens, consequat cursus partiendo ullamcorper. Vulputate facilisi Donec Aliquam labore inimicus voluptua. Penatibus sea Vel amet. His ius audire In mea Repudiandae nullam sed assentior. Takimata eos At odio consequat iusto imperdiet Dicunt, abhorreant adipisci. Officiis rhoncus leo dicta vitae, clita elementum mauris definiebas. Consetetur te inimicus nec mus. Lorem Usu Duo Aenean corrumpit aliquyam est eum. Ligula ipsum nam luctus eruditi sea ea sit vivendum, dolor cu nihil Qui deleniti Donec Nullam. Takimata Maecenas consetetur incorrupte Aenean eirmod senserit eos. Amet, ocurreret et pro atomorum et rebum. Pro quis ut nec meis brute nunc.   
+		Lorem cum nihil platea tincidunt sed eleifend et imperdiet sitsem.</p>
+
 
         <h2>Kontakt</h2>
-        <p>Wenn du Fragen hast oder Unterstützung benötigst, kannst du uns jederzeit über die Seite <a href="contact.html">Kontakt</a> erreichen. Wir freuen uns auf deine Nachricht und darauf, dir in deinem Glaubensweg zu helfen.</p>
+        <p>Lorem ipsum semper habeo duo, ut vis. Aliquyam eu splendide. Ut mei eteu nec antiopam corpora. Kasd pretium cetero qui arcu. Assentior ei his usu invidunt kasd justo justo. Semper Ne eleifend Per ut Eam graeci tincidunt. Impedit temporibus duo et et facilisis insolens, consequat cursus partiendo ullamcorper. Vulputate facilisi Donec Aliquam labore inimicus voluptua. Penatibus sea Vel amet. His ius audire In mea Repudiandae nullam sed assentior. Takimata eos At odio consequat iusto imperdiet</p>
     </div>
 
     <!-- Footer -->
