--- a/about.html
+++ b/about.html
@@ -9,11 +9,14 @@
     <style>
         /* Allgemeine Formatierung */
         body {
-            font-family: "Times New Roman", Times, serif;
+            font-family: "Arial", sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f2f2f2;
             overflow-y: scroll;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         /* Hauptcontainer */
@@ -22,7 +25,7 @@
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
-            margin-top: 100px;
+            margin-top: 150px;
         }
 
         /* Kartencontainer */
@@ -40,6 +43,8 @@
             transform-style: preserve-3d;
             transition: transform 0.6s;
             cursor: pointer;
+            background-color: #333; /* Schwarz */
+            border-radius: 10px;
         }
 
         .card.flip {
@@ -56,24 +61,26 @@
             justify-content: center;
             align-items: center;
             font-size: 20px;
-            color: #fff;
             border-radius: 10px;
+            padding: 20px;
         }
 
         /* Vorderseite der Karte */
         .card-front {
-            background-color: #888;
+            background-color: #333; /* Schwarz */
+            color: white;
         }
 
         /* Rückseite der Karte */
         .card-back {
-            background-color: #4CAF50;
+            background-color: white; /* Weiß */
+            color: #333; /* Schwarz für Text */
             transform: rotateY(180deg);
-            padding: 20px;
             text-align: center;
+            border: 2px solid #333;
         }
 
-        /* Kreuzsymbol auf der Karte */
+        /* Kreuzsymbol und Buchsymbol */
         .card-logo {
             font-size: 50px;
             margin-bottom: 10px;
@@ -81,12 +88,8 @@
 
         /* Header und Footer */
         header, footer {
-            background-color: #888;
+            background-color: #333;
             color: #fff;
-        }
-
-        body, header, footer {
-            font-family: Arial, sans-serif;
         }
 
         footer {
@@ -95,8 +98,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            border-top: 1px solid #ccc;
-            background-color: #888;
+            background-color: #333;
         }
 
         /* Hamburger-Icon */
@@ -115,17 +117,16 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: rgba(0,0,0,0.9); /* Schwarzer Hintergrund mit Transparenz */
+            background-color: rgba(0, 0, 0, 0.9); /* Schwarzer Hintergrund mit Transparenz */
             overflow-x: hidden;
             transition: 0.5s;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Vertikales Zentrieren */
-            align-items: center; /* Horizontales Zentrieren */
+            justify-content: center;
+            align-items: center;
         }
 
-
-      /* Links in der Sidenav */
+        /* Links in der Sidenav */
         .sidenav a {
             padding: 15px;
             text-decoration: none;
@@ -133,7 +134,7 @@
             color: #fff;
             display: block;
             transition: 0.3s;
-            text-align: center; /* Text in der Mitte */
+            text-align: center;
         }
 
         /* Hover-Effekt für die Links */
@@ -149,7 +150,7 @@
             font-size: 36px;
             color: #fff;
         }
-		
+
         /* Header-Navigation */
         .w3-bar {
             display: flex;
@@ -157,6 +158,7 @@
             align-items: center;
             padding: 10px;
         }
+
     </style>
 </head>
 <body>
@@ -211,8 +213,7 @@
         <p></p>
     </footer>
 
-   
-   <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
+    <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
     <script>
         /* Öffnet die Seitenleiste */
         function openNav() {
