--- a/info.html
+++ b/info.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bibelverse</title>
+    <title>Fragen</title>
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
@@ -30,7 +30,7 @@
             margin-right: 20px;
         }
 
-     /* Seitenleiste (Sidenav) */
+        /* Seitenleiste (Sidenav) */
         .sidenav {
             height: 100%;
             width: 0;
@@ -47,8 +47,7 @@
             align-items: center; /* Horizontales Zentrieren */
         }
 
-
-      /* Links in der Sidenav */
+        /* Links in der Sidenav */
         .sidenav a {
             padding: 15px;
             text-decoration: none;
@@ -73,7 +72,6 @@
             color: #fff;
         }
 
-
         /* Header-Navigation */
         .w3-bar {
             display: flex;
@@ -85,16 +83,62 @@
         /* Hauptcontainer für Seiteninhalt */
         #info-container {
             margin: 100px auto;
-            padding: 20px;
-            max-width: 800px;
+            padding: 30px;
+            max-width: 700px;
             background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
         }
 
-        /* Titel und Text */
-        h2, p {
+        /* Formular-Styling */
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        label {
+            margin-top: 15px;
+            font-weight: bold;
+            color: #555;
+        }
+
+        input, textarea {
+            padding: 12px;
+            margin-top: 5px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            background-color: #f9f9f9;
+            transition: background-color 0.3s;
+        }
+
+        input:focus, textarea:focus {
+            background-color: #eef;
+            outline: none;
+            border-color: #888;
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        /* Button Styling */
+        input[type="submit"] {
+            background-color: #333;
+            color: white;
+            cursor: pointer;
+            border: none;
+            margin-top: 20px;
+            padding: 15px;
+            font-size: 18px;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        input[type="submit"]:hover {
+            background-color: white;
             color: #333;
-            text-align: left;
+            border: 1px solid #333;
         }
 
         /* Footer */
@@ -127,18 +171,25 @@
         <a href="about.html">Bibelverse</a>
         <a href="info.html">Kontakt</a>
     </div>
+
     <!-- Hauptcontainer für die Inhalte der Website -->
     <div id="info-container">
-        <h2>E-Mail</h2>
-        <p>Jesus2you@gmx.ch</p>
-    </div>
-    <div id="info-container">
-        <h2>Telefon</h2>
-        <p>+417600000000</p>
-    </div>
-    <div id="info-container">
-        <h2>Fragen</h2>
-        <p>Frage?</p>
+        <h2>Fragen?</h2>
+        <form action="mailto:test.test@test.test" method="post" enctype="text/plain">
+            <label for="first-name">Vorname:</label>
+            <input type="text" id="first-name" name="Vorname" required>
+
+            <label for="last-name">Nachname:</label>
+            <input type="text" id="last-name" name="Nachname" required>
+
+            <label for="email">E-Mail:</label>
+            <input type="email" id="email" name="Email" required>
+
+            <label for="frage">Frage:</label>
+            <textarea id="frage" name="Frage" rows="5" required></textarea>
+
+            <input type="submit" value="Frage senden">
+        </form>
     </div>
 
     <!-- Footer -->
@@ -146,7 +197,7 @@
         <p></p>
     </footer>
 
-   <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
+    <!-- JavaScript zum Öffnen und Schließen der Seitenleiste -->
     <script>
         /* Öffnet die Seitenleiste */
         function openNav() {
